--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,12 @@
     ],
     "require": {
         "php": "^7.2",
-        "laravel/framework": "~5.7.0"
+        "laravel/framework": "~5.7.0|~5.8.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.9",
-        "larapack/dd": "^1.0",
         "opensoft/doctrine-postgres-types": "^1.3",
-        "orchestra/testbench": "3.7.*",
+        "orchestra/testbench": "3.8.*",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
