--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "doctrine/dbal": "^2.9",
         "opensoft/doctrine-postgres-types": "^1.3",
         "orchestra/testbench": "3.8.*",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
