--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/bus": "~5.7.0|~5.8.0",
-        "illuminate/contracts": "~5.7.0|~5.8.0",
-        "illuminate/database": "~5.7.0|~5.8.0",
-        "illuminate/support": "~5.7.0|~5.8.0"
+        "illuminate/bus": "^5.8|^6.0",
+        "illuminate/contracts": "^5.8|^6.0",
+        "illuminate/database": "^5.8|^6.0",
+        "illuminate/support": "^5.8|^6.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.9",
         "opensoft/doctrine-postgres-types": "^1.3",
-        "orchestra/testbench": "3.8.*",
-        "phpunit/phpunit": "^7.0|^8.0"
+        "orchestra/testbench": "^3.8",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -40,5 +40,7 @@
     },
     "config": {
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
