--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require-dev": {
         "doctrine/dbal": "^2.9",
         "opensoft/doctrine-postgres-types": "^1.3",
-        "orchestra/testbench": "^3.8",
+        "orchestra/testbench": "^3.8|^4.0",
         "phpunit/phpunit": "^8.0"
     },
     "autoload": {
