--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "wfeller/laravel-batch",
-    "description": "Insert or update models in batch, while still firing model events.",
+    "description": "Insert, update or delete models in batch, while still firing model events.",
     "keywords": ["laravel", "batch", "queue"],
     "homepage": "https://github.com/wfeller/laravel-batch",
     "license": "MIT",
@@ -19,7 +19,6 @@
     },
     "require-dev": {
         "doctrine/dbal": "^2.9",
-        "opensoft/doctrine-postgres-types": "^1.3",
         "orchestra/testbench": "^3.8|^4.0",
         "phpunit/phpunit": "^8.0"
     },
