--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "illuminate/bus": "^5.8|^6.0",
-        "illuminate/contracts": "^5.8|^6.0",
-        "illuminate/database": "^5.8|^6.0",
-        "illuminate/support": "^5.8|^6.0"
+        "php": "^7.4",
+        "illuminate/bus": "^7.0",
+        "illuminate/contracts": "^7.0",
+        "illuminate/database": "^7.0",
+        "illuminate/support": "^7.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.9",
-        "orchestra/testbench": "^3.8|^4.0",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "^4.0|^5.0",
+        "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
