--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "illuminate/bus": "^7.0|^8.0",
         "illuminate/contracts": "^7.0|^8.0",
         "illuminate/database": "^7.0|^8.0",
