--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/bus": "^9.0",
-        "illuminate/contracts": "^9.0",
-        "illuminate/database": "^9.0",
-        "illuminate/support": "^9.0"
+        "illuminate/bus": "^8.0|^9.0",
+        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/database": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0"
     },
     "require-dev": {
-        "doctrine/dbal": "^2.13.3|^3.1.4",
-        "orchestra/testbench": "^7.0",
-        "phpunit/phpunit": "^9.0"
+        "doctrine/dbal": "^2.9|^3.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0",
+        "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
